basic layout of table and seating positions

--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
+<!DOCTYPE html>
 <html>
-    <!--Content goes here-->
+<head>
+  <title>Spades Game</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>Spades Game</h1>
+  <div class="game-container">
+    <div class="seat" id="north">
+      <div class="name">North</div>
+      <div class="cards"></div>
+    </div>
+    <div class="row">
+      <div class="seat" id="west">
+        <div class="name">West</div>
+        <div class="cards"></div>
+      </div>
+      <div class="seat" id="east">
+        <div class="name">East</div>
+        <div class="cards"></div>
+      </div>
+    </div>
+    <div class="seat" id="south">
+      <div class="name">South</div>
+      <div class="cards"></div>
+    </div>
+  </div>
+
+  <script src="js/game.js"></script>
+</body>
 </html>
