inital card styling, move tests

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </div>
     <div class="seat" id="south">
       <div class="name">South</div>
-      <div class="cards"></div>
+      <div class="cards" id="player-hand"></div>
     </div>
   </div>
 
-  <script src="js/game.js"></script>
+  <script src="js/game.js" type="module"></script>
 </body>
 </html>
