--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
   </div>
 
-  <script src="js/game.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
