add a container where players can play cards

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <div class="name">West</div>
         <div class="cards"></div>
       </div>
+      <div class="play-area"></div> <!-- New play area container -->
       <div class="seat" id="east">
         <div class="name">East</div>
         <div class="cards"></div>
       </div>
     </div>
     <div class="seat" id="south">
-      <div class="name">South</div>
+      <div class="name">Your Hand</div>
       <div class="cards" id="player-hand"></div>
     </div>
   </div>
