--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
   <div class="game-container">
     <div class="seat" id="north">
       <div class="name">North</div>
-      <div class="cards"></div>
+      <div class="cards">
+        <div class="card card-back"></div> <!-- Placeholder for face-down card -->
+      </div>
     </div>
     <div class="row">
       <div class="seat" id="west">
         <div class="name">West</div>
-        <div class="cards"></div>
+        <div class="cards">
+          <div class="card card-back"></div> <!-- Placeholder for face-down card -->
+        </div>
       </div>
-      <div class="play-area"></div> <!-- New play area container -->
+      <div class="play-area"></div>
       <div class="seat" id="east">
         <div class="name">East</div>
-        <div class="cards"></div>
+        <div class="cards">
+          <div class="card card-back"></div> <!-- Placeholder for face-down card -->
+        </div>
       </div>
     </div>
     <div class="seat" id="south">
