play area layout fixed & turn logic halfway there.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
           <div class="card card-back"></div> <!-- Placeholder for face-down card -->
         </div>
       </div>
-      <div class="play-area"></div>
+      <div class="play-area">
+        <div class="card north"></div>
+        <div class="card west"></div>
+        <div class="card east"></div>
+        <div class="card south"></div>
+      </div>
       <div class="seat" id="east">
         <div class="name">East</div>
         <div class="cards">
