--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <h1>Spades Game</h1>
   <div class="top-section">
     <div class="scoreboard">
-      <div class="team1-score">Team 1 Score: 0</div>
-      <div class="team2-score">Team 2 Score: 0</div>
+      <div class="team1-score">Us Score: 0</div>
+      <div class="team2-score">Them Score: 0</div>
     </div>
     <div class="books-section">
-      <div class="team1-books">Team 1 Books: 0 / Bid: 0</div>
-      <div class="team2-books">Team 2 Books: 0 / Bid: 0</div>
+      <div class="team1-books">Our Books: 0 / Bid: 0</div>
+      <div class="team2-books">Their Books: 0 / Bid: 0</div>
     </div>
   </div>  
   <div class="game-container">
