First pass at fixing bugs with display and rules

--- a/qunit-test.html
+++ b/qunit-test.html
@@ -37,5 +37,7 @@
   <!-- Test files -->
   <script src="js/test/qunit/card.test.js" type="module"></script>
   <script src="js/test/qunit/integration/trickFlow.test.js" type="module"></script>
+  <script src="js/test/qunit/ruleEnforcement.test.js" type="module"></script>
+  <script src="js/test/qunit/cardAnimation.test.js" type="module"></script>
 </body>
 </html>
