- More unit tests - More integration tests

--- a/qunit-test.html
+++ b/qunit-test.html
@@ -36,6 +36,10 @@
   
   <!-- Test files -->
   <script src="js/test/qunit/card.test.js" type="module"></script>
+  <script src="js/test/qunit/deck.test.js" type="module"></script>
+  <script src="js/test/qunit/hand.test.js" type="module"></script>
+  <script src="js/test/qunit/legalPlayRules.test.js" type="module"></script>
+  <script src="js/test/qunit/cardComparer.test.js" type="module"></script>
   <script src="js/test/qunit/integration/trickFlow.test.js" type="module"></script>
   <script src="js/test/qunit/ruleEnforcement.test.js" type="module"></script>
   <script src="js/test/qunit/cardAnimation.test.js" type="module"></script>
