backing up files. the valid plays funtionality is broken now

--- a/qunit-test.html
+++ b/qunit-test.html
@@ -34,14 +34,22 @@
   <script src="js/stratagies/play/playStrategy.js" type="module"></script>
   <script src="js/stratagies/play/smartPlayStrategy.js" type="module"></script>
   
-  <!-- Test files -->
+  <!-- Unit Test files -->
   <script src="js/test/qunit/card.test.js" type="module"></script>
   <script src="js/test/qunit/deck.test.js" type="module"></script>
   <script src="js/test/qunit/hand.test.js" type="module"></script>
   <script src="js/test/qunit/legalPlayRules.test.js" type="module"></script>
   <script src="js/test/qunit/cardComparer.test.js" type="module"></script>
-  <script src="js/test/qunit/integration/trickFlow.test.js" type="module"></script>
   <script src="js/test/qunit/ruleEnforcement.test.js" type="module"></script>
   <script src="js/test/qunit/cardAnimation.test.js" type="module"></script>
+  
+  <!-- Integration Test files -->
+  <script src="js/test/qunit/integration/trickFlow.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/gameInitialization.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/spadesBreaking.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/trickWinning.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/playerStrategy.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/unusualDistributions.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/errorHandling.test.js" type="module"></script>
 </body>
 </html>
