fix the "spades broken" state logic

--- a/qunit-test.html
+++ b/qunit-test.html
@@ -37,6 +37,7 @@
   <!-- Unit Test files -->
   <script src="js/test/qunit/card.test.js" type="module"></script>
   <script src="js/test/qunit/deck.test.js" type="module"></script>
+  <script src="js/test/qunit/game.test.js" type="module"></script>
   <script src="js/test/qunit/hand.test.js" type="module"></script>
   <script src="js/test/qunit/legalPlayRules.test.js" type="module"></script>
   <script src="js/test/qunit/cardComparer.test.js" type="module"></script>
