fixed bug with player's valid hand logic

--- a/qunit-test.html
+++ b/qunit-test.html
@@ -52,5 +52,6 @@
   <script src="js/test/qunit/integration/playerStrategy.test.js" type="module"></script>
   <script src="js/test/qunit/integration/unusualDistributions.test.js" type="module"></script>
   <script src="js/test/qunit/integration/errorHandling.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/leadingSuitValidation.test.js" type="module"></script>
 </body>
 </html>
