--- a/qunit-test.html
+++ b/qunit-test.html
@@ -53,5 +53,6 @@
   <script src="js/test/qunit/integration/unusualDistributions.test.js" type="module"></script>
   <script src="js/test/qunit/integration/errorHandling.test.js" type="module"></script>
   <script src="js/test/qunit/integration/leadingSuitValidation.test.js" type="module"></script>
+  <script src="js/test/qunit/integration/cardComparison.test.js" type="module"></script>
 </body>
 </html>
